deployment/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: my-go
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-app
  template:
    metadata:
      labels:
        app: go-app
    spec:
      containers:
        - name: my-go
          image: quay.io/lucarval/devfile-sample-go-basic:c167f6eb7fae2b89b11a3e5bdbc483eda6fc1256@sha256:e96c2a32deb710cfda78607244010e45267ec38fed5dcfe2d0a327808868bbf4
          ports:
            - name: http
              containerPort: 8081
              protocol: TCP
          resources:
            requests:
              memory: "10Mi"
              cpu: "10m"
