deployment/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: my-go
spec:
  ports:
    - name: http-8081
      port: 8081
      protocol: TCP
      targetPort: 8081
  selector:
    app: go-app
